--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <h1>My Projects :</h1>
             <div class="link-btn">
                 <a href="https://neodev-id.netlify.app" target="_blank" class="neodev long-btn">Neo.Dev</a>
-                <a href="data-c19-indonesia.netlify.app" target="_blank" class="data-c19 long-btn">Data Covid 19 Indonesia</a>
+                <a href="https://data-c19-indonesia.netlify.app" target="_blank" class="data-c19 long-btn">Data Covid 19 Indonesia</a>
 
                 <div class="socials">
                     <div class="circle">
