feat: add new project, change background

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <div class="link-btn">
                 <a href="https://neodev-id.netlify.app" target="_blank" class="neodev long-btn">Neo.Dev</a>
                 <a href="https://data-c19-indonesia.netlify.app" target="_blank" class="data-c19 long-btn">Data Covid 19 Indonesia</a>
+                <a href="https://interior-x.netlify.app/" target="_blank" class="interior-x long-btn">Interior | X</a>
 
                 <div class="socials">
                     <div class="circle">
@@ -46,7 +47,7 @@
         </div>
 
         <footer>
-            <p>Made with ❤️ by <strong>Paul Mahardika</strong> </p>
+            <p>Made with <i class="fa fa-heart"></i> by <strong>Paul Mahardika</strong> </p>
         </footer>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
@@ -61,3 +62,5 @@
 </body>
 
 </html>
+
+<!-- ANIMATION BY Marius, link : https://dribbble.com/shots/5408177-Loading-animation?utm_source=Clipboard_Shot&utm_campaign=Kasnauskas&utm_content=Loading%20animation&utm_medium=Social_Share&utm_source=Clipboard_Shot&utm_campaign=Kasnauskas&utm_content=Loading%20animation&utm_medium=Social_Share -->
