--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="container">
         <div class="header">
             <div class="avatar">
-                <img src="img/my-profile.jpg" alt="">
+                <img src="img/my-profile.jpeg" alt="">
             </div>
             <div class="username">
                 <h3>Paul Mahardika</h3>
