update: index.html

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                             <li><a href="https://instagram.com/paul_mhrdka" class="fab fa-instagram"></a></li>
                             <li><a href="https://twitter.com/paul_mahardika" class="fab fa-twitter"></a></li>
                             <li><a href="mailto:pmsp3108@gmail.com" class="fas fa-envelope"></a></li>
-                            <li><a href="http://github.com/PMSP31" class="fab fa-github"></a></li>
+                            <li><a href="http://github.com/paulmhrdka" class="fab fa-github"></a></li>
                         </ul>
                     </div>
                 </div>
