update: index.html

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="main-content">
             <h1>My Projects :</h1>
             <div class="link-btn">
-                <a href="https://neodev-id.netlify.app" target="_blank" class="neodev long-btn">Neo.Dev</a>
+<!--                 <a href="https://neodev-id.netlify.app" target="_blank" class="neodev long-btn">Neo.Dev</a> -->
                 <a href="https://data-c19-indonesia.netlify.app" target="_blank" class="data-c19 long-btn">Data Covid 19 Indonesia</a>
                 <a href="https://interior-x.netlify.app/" target="_blank" class="interior-x long-btn">Interior | X</a>
 
